creato le sezioni delle 3 foto

--- a/index.html
+++ b/index.html
@@ -6,6 +6,36 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <div class="full-height-conteiner img-1">
+        <div>
+            <!--sezione foto-->
+        </div>
+        <div>
+            <!--sezione testo-->
+        </div>
+
+    </div>
+    <div class="full-height-conteiner img-2">
+        <div>
+            <!--sezione foto-->
+        </div>
+        <div>
+            <!--sezione testo-->
+        </div>
+
+    </div>
+    <div class="full-height-conteiner img-3">
+        <div>
+            <!--sezione foto-->
+        </div>
+        <div>
+            <!--sezione testo-->
+        </div>
+
+    </div>
+    
+
     
 </body>
 </html>
